<resources>
    <string name="app_name">PureGlow</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="invalid_cvc">Invalid cvc</string>
    <string name="invalid_year">Invalid year</string>
    <string name="invalid_month">Invalid month</string>
    <string name="empty_blanks">Please fill all fields</string>
    <string name="fail">Something went wrong</string>
    <string name="empty_favorites">There are no products in your favorites.</string>
    <string name="added_to_cart">%1$s added to cart</string>
    <string name="invalid_payment">Please enter valid payment information.</string>
    <string name="empty_email">Email is empty</string>
    <string name="quantity">Quantity</string>
    <string name="all_products">All Products</string>
    <string name="sale_products">Discounted Products</string>
    <string name="cvc">CVC</string>
    <string name="address_information">Address Information</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="address">Address</string>
    <string name="address_title">Address Title</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="card_number">Card Number</string>
    <string name="card_information">Card Information</string>
    <string name="card_owner">Card Owner</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_tv">Sign In</string>
    <string name="sign_up_up">SIGN UP</string>
    <string name="sign_in_up">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_in">Sign Up</string>
    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="pure_glow">PUREGLOW</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="product_price">%s ₺</string>
    <string name="zero_price">0.00</string>
    <string name="total_price">Total Price</string>

</resources>